<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3943"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Pedo">


    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="100dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:textAlignment="center"
            android:max="10000"/>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/j"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newtext"
            android:layout_width="187dp"
            android:layout_height="30dp"
            android:text="@string/distance_covered_metr"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="1232dp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="182dp"
            android:layout_height="46dp"
            android:autofillHints=""
            android:hint="@string/cb"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#90A4AE"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="1815dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/calories_burnt_ca"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="1132dp" />


        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cb"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#90A4AE"
            tools:ignore="VisualLintTextFieldSize" />


    </LinearLayout>


</LinearLayout>
